# open-stan

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  README.fr.md  README.md  deny.toml  rustfmt.toml
.github/workflows/: rust.yml
assets/: greetings.txt
src/: lib.rs  main.rs  navitia_token.rs  utils.rs
src/endpoints/: arrivals.rs  lanes.rs  lines.rs  mod.rs  stops.rs  time.rs  times.rs
src/entities/: api_doc.rs  api_query_args.rs  api_state.rs  arrival.rs  lanes.rs  line.rs  lines.rs  mod.rs  stop.rs  time.rs
stan-api/: Lines.bru  T1 stop_schedules presign.bru  T1 stop_schedules.bru  all lane presign.bru  all lanes.bru  arrets t1.bru  bruno.json  get nws session.bru  horaires arret.bru  one lane presign.bru  one line.bru  one stop area presign.bru  one stop area.bru  open-stan all lines.bru
tests/: lines_endpoint_tests.rs  stops_endpoint_tests.rs
tests/data/: homepage.html  stops.json
