[package]
name = "open-stan"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"]}
anyhow = "1.0.100"
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["blocking", "json"]}
scraper = "0.24.0"
