[package]
name = "open-stan"
version = "0.1.0"
edition = "2024"
description = "Lightweight open-source implementation of the STAN API, exposing endpoints for bus lines, stops, and real-time arrivals."
repository = "https://github.com/ZackPedretti/open-stan"
keywords = ["rest", "api", "bus", "realtime", "nancy"]
categories = [
    "api-bindings",
    "web-programming",
    "network-programming"
]

[licenses]
allow = ["MIT", "Apache-2.0", "MIT OR Apache-2.0"]

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"]}
anyhow = "1.0.100"
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["blocking", "json"]}
scraper = "0.24.0"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
base64 = "0.22.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
rand = "0.9.2"
aes-gcm = "0.10.3"
uuid = { version = "1.18.1", features = ["v4"] }